# matrix-wechat-agent-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: constants.rs  lib.rs  main.rs  manager.rs  utils.rs  wechat.rs  ws.rs
src/manager/: matrix.rs  wechat.rs
src/ws/: recv.rs  send.rs
